# heracles

./: .env.example  .env.production.example  .gitignore  404.html  AGENTS.md  CLAUDE.md  INSTALL.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  index.html  mkdocs.yml  sitemap.xml
heracles-api/: .dockerignore  .env.example  AGENTS.md  CHANGELOG.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run-dev.sh  seed-config.json
heracles-api/alembic/: README.md  env.py  script.py.mako
heracles-api/alembic/versions/: 0001_create_config_tables.py  0001_initial.py  0002_add_roles_rdn.py  0002_audit_and_templates.py  0003_create_acl_tables.py  0003_template_plugin_activations.py  0004_add_builtin_to_assignments.py  20250131_0001_create_config_tables.py  20250201_0001_add_ldap_migration_settings.py
heracles-api/heracles_api/: __init__.py  config.py  main.py
heracles-api/heracles_api/acl/: __init__.py  core_acl.json  guard.py  registry.py  schemas.py  service.py
heracles-api/heracles_api/api/: __init__.py
heracles-api/heracles_api/api/v1/: __init__.py
heracles-api/heracles_api/core/: __init__.py  database.py  dependencies.py  ldap_config.py  logging.py  migrations.py  password_policy.py  seed.py
heracles-api/heracles_api/middleware/: __init__.py  acl.py  audit.py  csrf.py  https.py  plugin_access.py  rate_limit.py
heracles-api/heracles_api/models/: __init__.py  acl.py  audit.py  config.py  template.py
heracles-api/heracles_api/plugins/: __init__.py  base.py  loader.py  registry.py
heracles-api/heracles_api/repositories/: __init__.py  acl_repository.py  audit_repository.py  config_history_repository.py  config_repository.py  department_repository.py  group_repository.py  plugin_config_repository.py  role_repository.py  template_repository.py  user_repository.py
heracles-api/heracles_api/schemas/: __init__.py  audit.py  auth.py  config.py  department.py  email.py  group.py  import_export.py  role.py  template.py  user.py
heracles-api/heracles_api/services/: __init__.py  audit_service.py  auth_service.py  config_service.py  import_service.py  ldap_migration_service.py  ldap_service.py  template_service.py
heracles-api/heracles_api/services/config/: __init__.py  base.py  cache.py  history.py  plugins.py  settings.py  validators.py
heracles-api/tests/: __init__.py  conftest.py
heracles-api/tests/factories/: __init__.py  group.py  user.py
heracles-api/tests/fixtures/: __init__.py  auth.py  entries.py  repositories.py
heracles-api/tests/integration/: __init__.py  conftest.py
heracles-api/tests/unit/: __init__.py  conftest.py
heracles-api/tests/unit/api/: __init__.py  test_auth.py  test_departments.py  test_groups.py  test_roles.py  test_users.py
heracles-api/tests/unit/repositories/: __init__.py  test_department_repository.py  test_role_repository.py
heracles-api/tests/unit/services/: __init__.py
heracles-core/: .dockerignore  AGENTS.md  CHANGELOG.md  Cargo.toml
heracles-core/src/: errors.rs  lib.rs  python.rs
heracles-core/src/acl/: attributes.rs  bitmap.rs  compiler.rs  engine.rs  mod.rs
heracles-core/src/crypto/: mod.rs  password.rs
heracles-core/src/ldap/: config.rs  connection.rs  dn.rs  filter.rs  mod.rs  operations.rs  pool.rs
heracles_plugins/: AGENTS.md  CHANGELOG.md  README.md  SCHEMA_ORGANIZATION.md  pyproject.toml  pytest.ini
heracles_plugins/heracles_plugins/: __init__.py
heracles_plugins/heracles_plugins/dhcp/: __init__.py  acl.json  plugin.py  plugin.yaml  routes.py  schemas.py  service.py
heracles_plugins/heracles_plugins/dhcp/docs/: README.md
heracles_plugins/heracles_plugins/dhcp/ldap/: hrc-dhcp.ldif  hrc-dhcp.schema
heracles_plugins/heracles_plugins/dhcp/schemas/: __init__.py  base.py  dhcp_class.py  dns_zone.py  enums.py  failover_peer.py  group.py  host.py  pool.py  service.py  shared_network.py  subnet.py  tree.py  tsig_key.py  validators.py
heracles_plugins/heracles_plugins/dhcp/service/: __init__.py  base.py  constants.py  service.py  utils.py
heracles_plugins/heracles_plugins/dhcp/tests/: __init__.py  test_schemas.py  test_service.py
heracles_plugins/heracles_plugins/dns/: __init__.py  acl.json  plugin.py  plugin.yaml  router.py  routes.py  schemas.py  service.py
heracles_plugins/heracles_plugins/dns/docs/: README.md
heracles_plugins/heracles_plugins/dns/ldap/: dnszone.ldif  dnszone.schema
heracles_plugins/heracles_plugins/dns/service/: __init__.py  base.py  constants.py  service.py  utils.py
heracles_plugins/heracles_plugins/mail/: __init__.py  acl.json  plugin.py  routes.py  schemas.py  service.py
heracles_plugins/heracles_plugins/mail/service/: __init__.py  base.py  mail_group_service.py  mail_user_service.py
heracles_plugins/heracles_plugins/mail/services/: __init__.py  mail_user_service.py
heracles_plugins/heracles_plugins/mail/tests/: __init__.py  conftest.py  test_routes.py  test_schemas.py  test_service.py
heracles_plugins/heracles_plugins/posix/: __init__.py  acl.json  plugin.py  plugin.yaml  routes.py  schema_group.json  schema_mixed_group.json  schema_user.json  schemas.py  service.py
heracles_plugins/heracles_plugins/ssh/: __init__.py  acl.json  plugin.py  plugin.yaml  routes.py  schema_ssh.json  schemas.py  service.py
heracles_plugins/heracles_plugins/sudo/: __init__.py  acl.json  plugin.py  plugin.yaml  routes.py  schema_sudo_role.json  schemas.py  service.py
heracles_plugins/heracles_plugins/systems/: __init__.py  acl.json  plugin.py  plugin.yaml  routes.py  schema_component.json  schema_mobile.json  schema_phone.json  schema_printer.json  schema_server.json  schema_terminal.json  schema_workstation.json  schemas.py  service.py
heracles_plugins/tests/: __init__.py
heracles_plugins/tests/e2e/: __init__.py  test_ssh_sudo_e2e.py
(+553 files in other folders)
