# =============================================================================
# Heracles API — Project Configuration (uv)
# =============================================================================

[project]
name = "heracles-api"
version = "0.8.1-rc"
description = "FastAPI backend for Heracles Identity Management"
readme = "CHANGELOG.md"
license = { text = "GPL-2.0" }
authors = [{ name = "Heracles Team" }]
requires-python = ">=3.11"

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=21.2.0",
    "python-multipart>=0.0.6",
    # Data Validation
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    # Database
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    # Redis
    "redis>=5.0.1",
    # Authentication
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    # HTTP Client
    "httpx>=0.26.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "orjson>=3.9.10",
    # Logging
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    # Linting & Formatting
    "black>=24.1.0",
    "ruff>=0.1.13",
    "mypy>=1.8.0",
    # Security Audit
    "pip-audit>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["heracles_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
