[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heracles-plugins"
version = "0.8.1-rc"
description = "Official plugins for Heracles Identity Management"
readme = "README.md"
license = { text = "GPL-2.0" }
authors = [{ name = "Heracles Team" }]
requires-python = ">=3.11"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["heracles_plugins"]

[tool.hatch.build.targets.wheel.sources]
"heracles_plugins" = "heracles_plugins"

[tool.hatch.build]
artifacts = ["*.json"]
